--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -84,6 +84,7 @@
                             <i class="nc-icon nc-circle-10"></i> My Account
                         </a>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                            <a *ngIf="isAdmin || isShopAdmin" class="dropdown-item" routerLink="/admin/account-summary">Account summary</a>
                             <a class="dropdown-item">Update profile</a>
                             <a class="dropdown-item" (click)="logout()">Logout</a>
                         </div>
