--- a/src/app/components/my-orders/my-orders.component.scss
+++ b/src/app/components/my-orders/my-orders.component.scss
@@ -60,3 +60,15 @@ input[type=number]::-webkit-outer-spin-button {
 input#number:focus-visible {
     outline: none;
 }
+
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.shop.disabled {
+    pointer-events: none;
+    opacity: 0.4;
+}
+
+button.bi.bi-calendar3 {
+    background-color: lightslategrey;
+    border: none;
+}
