--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -181,3 +181,21 @@ input[type=number]::-webkit-outer-spin-button {
 input#number:focus-visible {
     outline: none;
 }
+
+
+//rating
+span.stars,
+span.stars span {
+    display: block;
+    background: url('../../../assets/img/stars.png') 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
+}
+
+.alignright {
+    float: right;
+}
