--- a/src/app/components/my-orders/my-orders.component.html
+++ b/src/app/components/my-orders/my-orders.component.html
@@ -111,11 +111,16 @@
                                     <h4>{{orderItem.name}}</h4>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="button" class="btn btn-default btn-sm"
-                                        *ngIf="orderItem.status == 2 && orderItem.duration !=null"
+                                    <button type="button" class="btn btn-default btn-sm" *ngIf="orderItem.status == 2"
                                         style="width: 100%;margin-bottom:2px" #renewOrderModal
                                         (click)="openOrderItemRenewModal(contentRenew, orderItem)">
                                         Renew order
+                                    </button>
+                                    <button type="button" class="btn btn-default btn-sm"
+                                        *ngIf="orderItem.status == 2 && orderItem.duration !=null"
+                                        style="width: 100%;margin-bottom:2px" #reviewOrderModal
+                                        (click)="openOrderItemReviewModal(contentReview, orderItem)">
+                                        Leave a review
                                     </button>
                                     <button type="button" class="btn btn-danger btn-sm" *ngIf="orderItem.status == 1"
                                         style="width: 100%;margin-bottom:2px" #renewOrderModal
@@ -136,8 +141,8 @@
                                 <div class="col-md-4">
                                     <p>Quantity: {{orderItem.quantity}}</p>
                                     <p class="price" *ngIf="orderItem.duration">
-                                        Paid: {{orderItem.quantity * orderItem.price * orderItem.duration| currency:"Rs.
-                                        "}}
+                                        Paid:
+                                        {{orderItem.quantity * orderItem.price * orderItem.duration| currency:"Rs."}}
                                     </p>
                                     <p class="price" *ngIf="!orderItem.duration">
                                         Paid: {{orderItem.quantity * orderItem.price| currency:"Rs. "}}</p>
@@ -187,6 +192,11 @@
                                         style="width: 100%;margin-bottom:2px" #renewOrderModal
                                         (click)="openOrderItemRenewModal(contentRenew, orderItem)">
                                         Renew order
+                                    </button>
+                                    <button type="button" class="btn btn-success btn-sm" *ngIf="orderItem.status == 2"
+                                        style="width: 100%;margin-bottom:2px" #reviewOrderModal
+                                        (click)="openOrderItemReviewModal(contentReview, orderItem)">
+                                        Leave a review
                                     </button>
                                     <button type="button" class="btn btn-danger btn-sm" *ngIf="orderItem.status == 1"
                                         style="width: 100%;margin-bottom:2px" #renewOrderModal
@@ -392,6 +402,64 @@
         <div class="right-side">
             <button type="submit" class="btn btn-success btn-link" replaceText="Processing" (click)="payNow()"
                 [spinnerButton]="isProcessing">Pay</button>
+        </div>
+    </div>
+</ng-template>
+<ng-template #contentReview let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title text-center">Leave your thoughts</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+            <span aria-hidden="">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p><b>Your review will be shown to the public under this product.</b></p>
+        <br>
+        <form [formGroup]="reviewForm">
+            <div class="form-group flex" *ngIf="selectedOrderItem.review">
+                <label>Previously rated:</label>
+                <p style="margin-left: 20px;">{{selectedOrderItem.review.rating}} stars</p>
+            </div>
+            <div class="form-group flex">
+                <label>Rate the product {{selectedOrderItem.review?'again':''}}:</label>
+                <fieldset class="rating" style="margin-left: 20px;">
+                    <input type="radio" id="star5" name="rating" value="5" formControlName="rating" />
+                    <label for="star5">5 stars</label>
+                    <input type="radio" id="star4" name="rating" value="4" formControlName="rating" />
+                    <label for="star4">4 stars</label>
+                    <input type="radio" id="star3" name="rating" value="3" formControlName="rating" />
+                    <label for="star3">3 stars</label>
+                    <input type="radio" id="star2" name="rating" value="2" formControlName="rating" />
+                    <label for="star2">2 stars</label>
+                    <input type="radio" id="star1" name="rating" value="1" formControlName="rating" />
+                    <label for="star1">1 star</label>
+                </fieldset>
+            </div>
+            <p *ngIf="isSubmitted && reviewForm.status == 'INVALID' && reviewForm.controls.rating.errors.required"
+                class="form-error">
+                Please rate the item.</p>
+            <label>Leave a comment:</label>
+            <textarea class="form-control" formControlName="comment" rows="4"
+                placeholder="Tell us your thoughts and feelings..."></textarea>
+        </form>
+        <br>
+        <div class="row" *ngIf="selectedOrderItem.review">
+            <div class="col-md-6 offset-6">
+                <button type="button" class="btn btn-danger btn-sm" style="width: 100%;margin-bottom:2px"
+                    (click)="openOrderItemReviewClearModal(selectedOrderItem.review.id)">
+                    Delete my review
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer text-center">
+        <div class="left-side">
+            <button type="button" class="btn btn-default btn-link" (click)="modal.close()">Cancel</button>
+        </div>
+        <div class="divider"></div>
+        <div class="right-side">
+            <button type="button" class="btn btn-success btn-link" replaceText="Processing"
+                [spinnerButton]="isProcessing" (click)="submitReview(content)">Submit</button>
         </div>
     </div>
 </ng-template>
