--- a/src/app/components/admin/my-shops/my-shops.component.html
+++ b/src/app/components/admin/my-shops/my-shops.component.html
@@ -21,9 +21,9 @@
                 <li *ngFor="let shop of shops;" style="width: 300px;">
                     <div class="card-normal">
                         <div class="shops">
-                            <img *ngIf="shop.file" width="100%" [src]="imagePath+shop.file.location" alt="Shop Image"
+                            <img *ngIf="shop.image_path" width="100%" [src]="imagePath+shop.image_path" alt="Shop Image"
                                 class="img-thumbnail img-responsive">
-                            <img *ngIf="!shop.file" width="120" src="assets/img/default-shop.png" alt="Shop Image"
+                            <img *ngIf="!shop.image_path" width="120" src="assets/img/default-shop.png" alt="Shop Image"
                                 class="img-thumbnail img-responsive">
                             <p style="margin-top: 15px;"><b>{{shop.name|titlecase}}</b></p>
                             <p>{{shop.address|titlecase}}</p>
@@ -117,6 +117,10 @@
                             placeholder="Enter 9 digits phone number" (change)="test()">
                     </div>
                 </div>
+            </div>
+            <div class="form-group">
+                <label>Website</label>
+                <input type="text" class="form-control" formControlName="website" id="website">
             </div>
             <div class="form-group">
                 <label>Select image for the shop</label>
