--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -102,6 +102,14 @@
                             </div>
                             <hr>
                         </div>
+                        <div class="flex mb-10" *ngIf="!product.is_a_shop_listing">
+                            <i _ngcontent-uob-c127="" class="nc-icon nc-shop"></i>
+                            <div class="ml-10">
+                                <h4 class="m-0"><b class="cursor-pointer">{{product.user.name}}</b>
+                                </h4>
+                            </div>
+                            <hr>
+                        </div>
                         <div class="flex mb-10">
                             <i _ngcontent-uob-c127="" class="nc-icon nc-mobile"></i>
                             <div class="ml-10">
